# auto-mobile-robot

./: .gitignore  README.md  firmware-setup.sh
analysis/: Path Analysis.ipynb  trajectory.csv
analysis/.ipynb_checkpoints/: Path Analysis-checkpoint.ipynb
firmware/: README.md  arduino-headless
firmware/RobotInterface/: Constants.h  Devices.h  PID.cpp  PID.h  RobotInterface.ino
integration/Echo/: Echo.ino
integration/serial-test/: test.py
matlab/motion_planning/: direct_collocation.m  robot_sim.m  slalom_trajectory_generation.m  slalom_trajectory_generation.m~  traj_plotter.m  trajectory.csv
matlab/mpc/: differential_drive_discrete.m  mpc_main.m  mpc_main.m~  mpc_synthesis.m  mpc_synthesis.m~  plot_mpc_traj.m  plot_mpc_traj.m~
software/: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  rcompile.sh  robot.sh  run_sim.sh  sim.sh
software/include/: constants.h  robot_vars.h
software/include/control/: controller.h  ramsete.h
software/include/drivers/: arduino_interface.h  sensor_data.h  serial_port.h
software/include/gnc/control/: control_output.h  controller.h  ramsete.h
software/include/gnc/guidance/: trajectory_point.h
software/include/gnc/navigation/: diffdrive_ekf.h  robot_state.h
software/motion_planning/: differential_drive.m  direct_collocation.m  direct_collocation.m~  example_plotter.m  robot_plotter.m~  robot_sim.m  robot_sim.m~  simple_direct_collocation_test.m  simple_direct_collocation_test.m~  slalom_trajectory_generation.m  slalom_trajectory_generation.m~  traj_plotter.m
software/simulation/six-wheel-robot/: edit_box_world.sh  edit_slalom_world.sh  launch_box_world.sh  launch_cardboard_box_world.sh  launch_slalom_world.sh
software/simulation/six-wheel-robot/models/base-model/: model.sdf
software/simulation/six-wheel-robot/plugins/drivetrain/: drivetrain.cc
software/simulation/six-wheel-robot/worlds/: basic-cardboard-box-world.sdf  camera-tracking.sdf  slalom-world.sdf
software/src/: CMakeLists.txt  arduino_interface.cpp  arduino_interface.h  constants.h  loop.cpp  loop.h  main.cpp  optim_main.cpp  robot_vars.h  sim_interface.cpp  sim_interface.h  sim_main.cpp
software/src/control/: CMakeLists.txt  ramsete.cpp
software/src/control/include/control/: point_shoot.h  ramsete.h  utils.h
software/src/control/src/: pid_controller.cpp  point_shoot.cpp  ramsete.cpp  utils.cpp
software/src/drivers/: arduino_interface.cpp  serial_port.cpp
software/src/gnc/control/: ramsete.cpp
software/src/gnc/navigation/: diffdrive_ekf.cpp
software/src/guidance/: CMakeLists.txt
software/src/guidance/include/guidance/: trajectory_reader.h
software/src/guidance/src/: pure_pursuit.cpp  trajectory_reader.cpp
software/src/kleiber_control/: CMakeLists.txt
software/src/kleiber_control/include/kleiber_control/: control_output.h  controller.h  linear_mpc.h  pid_controller.h  point_shoot.h  ramsete.h  simple_drive_controller.h  state_space.h
software/src/kleiber_control/src/: linear_mpc.cpp  pid_controller.cpp  point_shoot.cpp  ramsete.cpp  simple_drive_controller.cpp  state_space.cpp  utils.cpp
software/src/kleiber_guidance/: CMakeLists.txt
software/src/kleiber_guidance/include/guidance/: pure_pursuit.h  trajectory_point.h  trajectory_reader.h
software/src/kleiber_guidance/include/kleiber_guidance/: action.h  pure_pursuit.h  routine.h  simple_command.h  trajectory_reader.h  vector_action.h
software/src/kleiber_guidance/src/: action.cpp  pure_pursuit.cpp  routine.cpp  trajectory_reader.cpp  vector_action.cpp
software/src/kleiber_navigation/: CMakeLists.txt
software/src/kleiber_navigation/include/kleiber_navigation/: diffdrive_ekf.h
software/src/kleiber_navigation/src/: diffdrive_ekf.cpp
software/src/navigation/include/navigation/: diffdrive_ekf.h
software/src/navigation/src/: diffdrive_ekf.cpp
